--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,2 +1,38 @@
 html{
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Verdana, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  height: 80px;
+  border-bottom-color: black;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+}
+.titleHead{
+  flex-wrap: nowrap;
+  align-self: center;
+  margin: 20 10;
+}
+
+.header li{
+  display: inline;
+  padding: 10px;
+  margin: 4px
+  height: 60px;
+}
+
+.logo{
+  display: flex;
+  color: MediumAquamarine;
+  margin-left: 20px;
+}
+
+.navHead a{
+  align-self: center;
+  color: black;
+}
