--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,25 +56,26 @@
 * ----- Headlines STYLE -----
 */
 h1{
-font-family: Georgia;
-font-weight: bold;
-font-size: 40px;
-color: white;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+  margin: 0px;
 }
 
 h2 {
-font-family: Georgia;
-font-weight: bold;
-font-size: 30px;
-color: white;
-text-align: center;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
 }
 
 h3{
-font-family: Georgia;
-font-weight: bold;
-font-size: 20px;
-text-align: left;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: left;
 }
 
 /* ------- FlexBox Proprieties ------ */
@@ -93,22 +94,14 @@ left: 0px;
 right: 0px;
 }
 
-/*.column{
-display: flex;
-flex-direction: column;
-min-width: 300px;
-background-color: MediumAquamarine;
-margin: 10;
-}*/
-
 .columnFirst{
 display: flex;
-flex-direction: row;
-flex-wrap: wrap;
+justify-content: space-between;
+flex-flow: row wrap;
 min-width: 630px;
 max-width: 630px;
 background-color: MediumAquamarine;
-margin: 10;
+margin: 10px;
 }
 
 .columnSecond{
@@ -121,124 +114,71 @@ margin: 10;
 }
 
 .columnThird{
-display: flex;
-flex-direction: column;
-min-width: 240px;
-max-width: 240px;
-background-color: MediumAquamarine;
-margin: 10;
+  display: flex;
+  flex-direction: column;
+  min-width: 240px;
+  max-width: 240px;
+  background-color: MediumAquamarine;
+  margin: 10;
 }
 
 .news{
   display: flex;
-  flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 100px;
+  flex-flow: : column nowrap;
+  width: 100%;
   height: 150px;
   border: 1px solid red;
   background-color: yellow;
-  margin: 5px;
+  /*margin: 5px;*/
 }
 
+.new1{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+  /*flex-flow: : column nowrap;*/
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  border: 1px solid red;
+  background-color: orange;
+  /*margin: 5px;*/
+}
+
+.new2{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+  /*flex-flow: : column nowrap;*/
+  flex-wrap: wrap;
+  width: 48%;
+  height: auto;
+  border: 0px solid red;
+  background-color: orange;
+  /*margin: 5px;*/
+}
 
 .headline{
-width: 20px;
-height: 30px;
-background-color: pink;
-border: 1px solid black;
+  width: 20px;
+  height: 30px;
+  background-color: pink;
+  border: 1px solid black;
 }
 
-
-/*#first.column{
-  flex-wrap: wrap;
-  margin: 20px 10px;
-  border: 2px solid black;
-  min-width: 300px;
-  max-width: 630px;
-  height: auto;
-}
-#second.column{
-  margin: 20px 10px;
-  border: 2px solid black;
-  min-width: 300px;
-  max-width: 300px;
-  height: auto;
-}
-#third.column{
-  margin: 20px 10px;
-  border: 2px solid black;
-  min-width: 240px;
-  max-width: 240px;
-  height: auto;
-}*/
-
-/*
-.news p{
-  margin: 0px;
-  font-family: Georgia;
-  font-size: 17px;
-  color: black;
-}
-
-.image-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-/*  font-family: Georgia;
-  font-weight: bold;
-  font-size: 30px;
-  color: white;
-  margin-top: 0px;*/
-}
-
-/*.image-container #mother{
-  font-family: Georgia;
-  font-weight: bold;
-  font-size: 40px;
-  color: white;
-  margin-top: 0px;
-}
-  /* Ask advisor on-line why the image wont show in whole*/
-/*
-.image-container #earth{
-  font-family: Georgia;
-  font-weight: bold;
-  font-size: 30px;
-  color: white;
-  margin-top: 0px;
-}*/
-
-#mainStory{
-  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+.mainImage{
   width: 630px;
   height: 300px;
-  /*background-position: top-left;*/
-  /*background-size: cover;*/
+  border: 1px solid white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
 }
 
-/*
-.news #earth{
-  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
-  /*width: 630px;*/
-/*  height: 300px;
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-*/
-
-/*
-.news #hipster{
-  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
-  /*width: 630px;*/
-/*  height: 300px;
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-.news #cats{
-  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
-  width: 298px;
-  height: 300px;
-  margin-bottom: 0px;
-  margin-top: 0px;
+.mainStory{
+  width: 630px;
+  height: auto;
+  background-color: white;
+  border: 1px solid black;
 }
